k8s-final/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: cloud-ninjas
spec:
  replicas: 5
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: selconyt/backend:93
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: cloud-ninjas
spec:
  selector:
    app: backend
  ports:
    - name: http  
      port: 80
      targetPort: 8000
  type: ClusterIP  # or NodePort if you need external access
