k8s-final/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: cloud-ninjas
spec:
  
  ingressClassName: nginx

  rules:
    - host: api.cloud-ninjas.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
